kubernetes/namespase.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taxi-namespace
  labels:
    name: taxi-namespace
    environment: production
