kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxi-service
spec:
  type: ClusterIP
  selector:
    app: taxi-service
  ports:
  - port: 80
    targetPort: 5000
